# MyProjs

./: README.md
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/image_processor/: CMakeLists.txt  controller.cpp  controller.h  crop.cpp  edge_detection.cpp  filterwithmatrix.cpp  filterwithmatrix.h  image_processor.cpp  read_image.cpp  read_image.h  readme.md  write_image.cpp  write_image.h
tasks/mines/: minesweeper.cpp  minesweeper.h  readme.md
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h  test.cpp
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp
tasks/search2/: readme.md  search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: readme.md  unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
tasks/zip2/: zip.h
